data/derived/comb/progs/unify/prog5302.ml.out
Characters 147-148:
  List.fold_left f base l;;
                 ^
Error: This expression has type string -> string -> string -> string
       but an expression was expected of type string -> string -> string
       Type string -> string is not compatible with type string 
